--- a/src/flashplayerswitcher/FlashPlayerSwitcher.mxml
+++ b/src/flashplayerswitcher/FlashPlayerSwitcher.mxml
@@ -21,6 +21,9 @@
 			import mx.events.AIREvent;
 			import mx.events.FlexEvent;
 			
+			public static const STATE_STORAGE:String = "storage";
+			public static const STATE_DOWNLOAD:String = "download";
+			
 			private function onInit():void
 			{
 				if (Capabilities.os.indexOf("Mac OS") == -1)
@@ -45,6 +48,10 @@
 			}
 		]]>
 	</fx:Script>
+	<s:states>
+		<s:State name="storage"/>
+		<s:State name="download"/>
+	</s:states>
 	<s:Group left="25" top="25">
 		<s:Image smooth="true" source="@Embed('flashplayerswitcher/assets/logo.png')"/>
 		<s:Label x="150" y="15" fontSize="48" text="Flash Player Switcher"/>
@@ -55,8 +62,8 @@
 	
 	<s:HGroup bottom="0" gap="20" width="100%" paddingLeft="25" paddingRight="25" paddingBottom="25">
 		<s:Group>
-			<view:PluginStorageListing id="storage" />
-			<view:PluginDownloadList id="download" visible="false"/>
+			<view:PluginStorageListing id="storage" includeIn="storage" />
+			<view:PluginDownloadList id="download" includeIn="download" />
 		</s:Group>
 		<s:VGroup width="100%" height="100%">
 			<view:InstalledVersionListing width="100%"/>
